tests/baselines/reference/emptyTypeArgumentListWithNew.errors.txt
==== tests/cases/compiler/emptyTypeArgumentListWithNew.ts (2 errors) ====
    class foo<T> { }
    new foo<>();
           ~~
!!! error TS1099: Type argument list cannot be empty.
    ~~~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.